index.css
@import url("./css/variables.css");
@import url("./css/animation.css");
@import url("./css/theme.css");
@import url("./css/fonts.css");
@import url("./css/dark-light-toggler.css");
@import url("./css/components.css");

/* Global Variables */
:root {
  -webkit-user-select: none;
  /* Safari, Chrome */
  -moz-user-select: none;
  /* Firefox */
  -ms-user-select: none;
  /* Internet Explorer/Edge */
  user-select: none;
  /* Standard syntax */

  scroll-behavior: smooth;

  /* variables */
  --header-height: calc(var(--space-2px) * 22);
  --header-backdrop-filter: var(--saturate-180-percentage) var(--filter-blur-20px);
}

body {
  margin: 0;
  padding: 0;

  display: flex;
  flex-direction: column;

  color: var(--color-secondary);
  background-color: var(--color-primary);
}

#loader {
  width: 100%;
  height: 100vh;
  position: fixed;
  top: 0;
  left: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: var(--z-index-100);
  background-color: var(--color-primary-shade);
}

header {
  width: 100%;
  top: 0;
  position: fixed;

  display: flex;
  justify-content: center;
  align-items: center;

  background-blend-mode: overlay;
  backdrop-filter: var(--header-backdrop-filter);
  -webkit-backdrop-filter: var(--header-backdrop-filter);

  max-height: var(--header-height);
  background-color: var(--color-primary);

  z-index: var(--z-index-10);
}

header>nav {
  width: inherit;
  height: inherit;
  margin: 0 auto;
  padding: calc(var(--space-2px) * 8);
}

header>nav>ul {
  margin: 0;
  padding: 0;
  width: auto;
  height: inherit;
  list-style: none;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

header>nav>ul li {
  height: var(--header-height);
  display: flex;
  align-items: center;
}

header>nav>ul li>a {
  border: 0;
  padding: 0;
  color: var(--color-secondary);
  pointer-events: auto;
  outline: none;
  cursor: pointer;
  text-decoration: none;
  display: flex;
  justify-content: center;
  align-items: center;
  background: transparent;
  -webkit-tap-highlight-color: transparent;
  -moz-tap-highlight-color: transparent;
}

header>nav>ul li>a:hover {
  color: var(--color-secondary-shade);
}

.responsive-menu {
  width: 100%;
  height: 100vh;
  position: fixed;
  top: 0;
  left: 0;
  opacity: 0;
  visibility: hidden;
  overflow: hidden;
  padding: var(--header-height) var(--header-height);
  background-color: var(--color-primary-tint);
}

.responsive-menu[data-state="Menu"] {
  animation: var(--animation-slide-up);
}

.responsive-menu[data-state="Close"] {
  animation: var(--animation-slide-down);
}

.responsive-menu>ul {
  list-style: none;
  padding: 0;
}

.responsive-menu>ul>li>a {
  border: 0;
  text-decoration: none;
  padding: calc(var(--space-2px) * 5) 0 var(--space-11px) 0;
  color: var(--color-secondary);
  font: var(--font-sf-pro-display-semibold-large);
  letter-spacing: var(--letter-spacing-007-em);
}

header>nav>ul li:has(.theme-changer) {
  margin-left: auto;
  margin-right: calc(var(--space-2px) * 8);
}

.bread-menu {
  z-index: var(--z-index-1);
}

main {
  margin-top: var(--header-height);
}

#home {
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0 calc(var(--space-2px) * 8);
}

.developer {
  display: none;
}

#about {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  padding: 0 calc(var(--space-2px) * 8);
}

#about>section {
  width: 100%;
}

#projects {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  padding: 0 calc(var(--space-2px) * 8);
}

footer {
  display: flex;
  justify-content: center;
  align-items: center;
  font: var(--font-sf-pro-text-small);
  color: var(--color-secondary-tint);
  background-color: var(--color-primary-shade);
}

